--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,3 +21,36 @@ body {
     padding: 0 1.25rem;
   }
 }
+.section-title {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #1a1a1a;
+  margin-bottom: 1.25rem;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+}
+
+.section-description {
+  font-size: 1rem;
+  color: #6b7280;
+  line-height: 1.7;
+  margin-bottom: 2rem;
+}
+
+.blog-link {
+  text-decoration: none;
+}
+.category-tag {
+  border: 1px solid #ef4444;
+  padding: 0.25rem 0.9rem;
+  border-radius: 9999px;
+  background-color: #FF00000F;
+  display: inline-block;
+  color: #ef4444;
+  font-size: 15px;
+  font-weight: 400;
+  text-transform: capitalize;
+  letter-spacing: 0px !important;
+  line-height: 18px;
+  margin-bottom: 1rem;
+}
