--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@ body {
   display: inline-block;
   color: #ef4444;
   font-size: 15px;
-  font-weight: 400;
+  font-weight: 500;
   text-transform: capitalize;
   letter-spacing: 0px !important;
   line-height: 18px;
@@ -58,4 +58,7 @@ body {
 .featured {
   padding: 6rem 0;
   background: white;
+}
+.bg-red{
+  background-color: #FF0000;
 }
